--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.2",
     "karma-jasmine": "^0.3.7",
-    "karma-phantomjs-launcher": "^1.0.0"
+    "karma-phantomjs-launcher": "^1.0.0",
+    "phantomjs": "^1.9.17",
+    "shelljs": "^0.6.0"
   }
 }
