--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Whatever geek tools.",
   "main": "app.js",
   "scripts": {
-    "test": "npm install -g mocha && gulp mocha && gulp test"
+    "test": "gulp mocha && gulp test"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "semantic-ui": "^2.1.8"
   },
   "devDependencies": {
+    "mocha": "*",
     "gulp": "^3.9.1",
     "gulp-jshint": "^2.0.0",
     "jade": "^1.11.0",
